--- a/src/global.scss
+++ b/src/global.scss
@@ -76,8 +76,7 @@ ion-content {
   text-align: center;
 }
 
-.game-board,
-.shelf {
+.game-board {
   background-image: url(assets/images/wood-bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -89,24 +88,8 @@ ion-content {
 
 .board {
   border: #C1A172 inset 2px;
-  width: 20vw;
+  // width: 20vw;
   border-radius: 12px;
-}
-
-.tile {
-  width: 13vw;
-  display: inline-block;
-}
-
-.tile-image {
-  width: 100%; // height: 90%;
-}
-
-.shelf {
-  width: 100%;
-  min-height: 15vw;
-  margin-top: 10px;
-  padding: 10px;
 }
 
 .isDragging .hover {
@@ -117,6 +100,7 @@ ion-content {
 
 .title {
   width: 100%;
+
   .tile {
     background: none;
     width: 10vw;
